[package]
name = "pbjson-types"
version = "0.5.1"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
description = "Protobuf well known types with serde serialization support"
edition = "2021"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/influxdata/pbjson"
exclude = ["protos/*"]

[dependencies] # In alphabetical order
bytes = "1.0"
pbjson = { path = "../pbjson", version = "0.5" }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
serde_json = "1.0"

[build-dependencies] # In alphabetical order
prost-build = "0.11"
pbjson-build = { path = "../pbjson-build", version = "0.5" }
